src/objects/Terms_of_Service__mdt.object
<CustomObject>
    <fields>
        <fullName>Electronic_Consent_Box_1_Text__c</fullName>
        <label>Electronic Consent Box 1 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Electronic_Consent_Box_2_Text__c</fullName>
        <label>Electronic Consent - Box 2 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTML_code__c</fullName>
        <label>HTML code</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Terms of Service</label>
    <pluralLabel>Terms of Service</pluralLabel>
</CustomObject>